# spl_transpiler

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  publish.yml
python/spl_transpiler/: __init__.py  __main__.py  live_translator.py  live_translator.tcss  macros.py  utils.py
python/spl_transpiler/runtime/: __init__.py  base.py  config.py  magic.py  magic_command.py  utils.py
python/spl_transpiler/runtime/commands/: __init__.py  data_model.py  eval.py  fill_null.py  search.py  stats.py  tstats.py
python/spl_transpiler/runtime/functions/: __init__.py  eval.py  stats.py  utils.py
python/spl_transpiler/runtime/udfs/: __init__.py
python/spl_transpiler/udfs/: cidr_match.py  tonumber.py
src/: format_python.rs  lib.rs  spl.rs
src/ast/: ast.rs  mod.rs  python.rs
src/commands/: mod.rs  regex_utils.rs  spl.rs  stats_utils.rs
src/commands/_sample/: pyspark.rs  spl.rs
src/commands/cmd_add_totals/: pyspark.rs  spl.rs
src/commands/cmd_bin/: pyspark.rs  spl.rs
src/commands/cmd_collect/: pyspark.rs  spl.rs
src/commands/cmd_convert/: pyspark.rs  spl.rs
src/commands/cmd_data_model/: pyspark.rs  spl.rs
src/commands/cmd_dedup/: pyspark.rs  spl.rs
src/commands/cmd_eval/: pyspark.rs  spl.rs
src/commands/cmd_event_stats/: pyspark.rs  spl.rs
src/commands/cmd_fields/: pyspark.rs  spl.rs
src/commands/cmd_fill_null/: pyspark.rs  spl.rs
src/commands/cmd_format/: pyspark.rs  spl.rs
src/commands/cmd_head/: pyspark.rs  spl.rs
src/commands/cmd_input_lookup/: pyspark.rs  spl.rs
src/commands/cmd_join/: pyspark.rs  spl.rs
src/commands/cmd_lookup/: pyspark.rs  spl.rs
src/commands/cmd_make_results/: pyspark.rs  spl.rs
src/commands/cmd_map/: pyspark.rs  spl.rs
src/commands/cmd_multi_search/: pyspark.rs  spl.rs
src/commands/cmd_mv_combine/: pyspark.rs  spl.rs
src/commands/cmd_mv_expand/: pyspark.rs  spl.rs
src/commands/cmd_rare/: pyspark.rs  spl.rs
src/commands/cmd_regex/: pyspark.rs  spl.rs
src/commands/cmd_rename/: pyspark.rs  spl.rs
src/commands/cmd_return/: pyspark.rs  spl.rs
src/commands/cmd_rex/: pyspark.rs  spl.rs
src/commands/cmd_s_path/: pyspark.rs  spl.rs
src/commands/cmd_search/: pyspark.rs  spl.rs
src/commands/cmd_sort/: pyspark.rs  spl.rs
src/commands/cmd_stats/: pyspark.rs  spl.rs
src/commands/cmd_stream_stats/: pyspark.rs  spl.rs
src/commands/cmd_t_stats/: mod.rs  pyspark.rs  spl.rs
src/commands/cmd_table/: pyspark.rs  spl.rs
src/commands/cmd_tail/: pyspark.rs  spl.rs
src/commands/cmd_top/: pyspark.rs  spl.rs
src/commands/cmd_where/: pyspark.rs  spl.rs
src/eval_fns/: mod.rs
src/functions/: convert_fns.rs  eval_fns.rs  mod.rs  shared.rs  stat_fns.rs
src/pyspark/: alias.rs  ast.rs  base.rs  dealias.rs  mod.rs  utils.rs
src/pyspark/transpiler/: base.rs  expr.rs  mod.rs  utils.rs
src/pyspark/transpiler/command/: add_totals.rs  bin.rs  convert.rs  convert_fns.rs  eval.rs  eval_fns.rs  fields.rs  head.rs  map.rs  mod.rs  multisearch.rs  search.rs  stats.rs
src/spl/: ast.rs  ast_impls.rs  macros.rs  mod.rs  operators.rs  parser.rs  python.rs  to_spl.rs  utils.rs
tests/: .gitignore  test_basic.py  test_macros.py  test_sample_files_parse.py  utils.py
tests/runtime/: conftest.py  test_basics.py  test_data_model.py  test_eval.py  test_fill_null.py  test_search.py  test_tstats.py  utils.py
tests/sample_data/macros/placeholders/: drop_dm_object_name.json
tests/sample_data/macros/security_content/: admon.json  amazon_security_lake.json  applocker.json  aws_cloudwatchlogs_eks.json  aws_config.json  aws_description.json  aws_ecr_users.json  aws_ecr_users_asl.json  aws_s3_accesslogs.json  aws_securityhub_finding.json  aws_securityhub_firehose.json  azure_audit.json  azure_monitor_aad.json  azuread.json  base64decode.json  bootloader_inventory.json  brand_abuse_dns.json  brand_abuse_email.json  brand_abuse_web.json  capi2_operational.json  certificateservices_lifecycle.json  circleci.json  cisco_networks.json  cloud_api_calls_from_previously_unseen_user_roles_activity_window.json  cloudtrail.json  cloudwatch_eks.json  cloudwatch_vpc.json  cloudwatchlogs_vpcflow.json  crowdstrike_identities.json  crowdstrike_stream.json  crushftp.json  driverinventory.json  dynamic_dns_providers.json  dynamic_dns_web_traffic.json  ec2_modification_api_calls.json  evilginx_phishlets_0365.json  evilginx_phishlets_amazon.json  evilginx_phishlets_aws.json  evilginx_phishlets_facebook.json  evilginx_phishlets_github.json  (+149 more)
tests/sample_data/queries/security_content/: 3cx_supply_chain_attack_network_indicators.spl  7zip_commandline_to_smb_share_path.spl  (+1813 more)
