[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"

[project]
name = "spl_transpiler"
dynamic = ["version"]
requires-python = ">=3.10"
description = "Convert Splunk SPL queries into PySpark code"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "black",
    "pydantic>=2",
    # Include to make this library directly executable, e.g. via uvx
    "textual[syntax]",
    "pyperclip",
]

[project.scripts]
spl_transpiler = "spl_transpiler.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-dependency",
    "tabulate",
    "pyparsing",
]
cli = [
    "textual[syntax]",
    "pyperclip",
]
runtime = [
    "pyspark",
    "ipython",
    "rich",
    "pydantic-settings",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Ignore the bulk query test by default (it can still be run directly)
addopts = "--ignore=tests/test_sample_files_parse.py --ignore=tests/sample_data"
